--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
         <img src=”unlock.svg” alt=”cadeado fechado”>
         <h2 class=”titulo-principal”>Gerador de senhas</h2>
         <h3 class=”titulo-secundario”>Gere instantaneamente
-        
+            <div class=”conteudo-senha”>
+
         uma senha aleatória e segura</h3>
+        <div class=”conteudo-senha”>
+
+            <label for=”senha”>Senha</label>
+            <input name=”senha” type=”text” id=”campo-senha”>
+            
+            </div>
         </div>
 </body>
 </html>
